# plaid-cli-wrapper

./: .gitignore  ASSIGNMENT.md  INSTALL.md  PLAN.md  README.md  SKILL_GIT.md  pyproject.toml
gitwrap/: __main__.py  confirm.py  output.py
gitwrap/core/: base_command.py  registry.py
gitwrap/services/: base_service.py
gitwrap/services/git/: service.py
gitwrap/services/git/commands/: __init__.py  base_command.py  clean.py  commit.py  push.py  reset.py  status.py
gitwrap/utils/: output.py
tests/unit/: test_output.py  test_routing.py
tests/unit/git/: test_clean.py  test_commit.py  test_parsers.py  test_push.py  test_reset.py  test_status.py
