[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "gitwrap"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = ["pyyaml"]

[project.scripts]
gitwrap = "gitwrap.__main__:main"
dockerwrap = "gitwrap.__main__:main"
kubewrap = "gitwrap.__main__:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
